# BookBuddARR

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
bookbuddarr/: __init__.py  audiobook_search.py  bookbuddy.py  cli.py  config.py  models.py  normalize.py  outputs.py  pipeline.py  registry.py  rules.py  stack.py  torznab.py  web.py  workflow.py
deploy/service/: README.md  bookbuddarr-torznab.env.example  compose.yaml  health_checks.py  prowlarr_generic_torznab.py
docs/: architecture.md  product-backlog.md  product-status.md  roadmap.md
docs/decisions/: ADR-0001-csv-registry-first.md  ADR-0002-review-queues-before-automation.md  ADR-0003-audiobook-first-torznab-bridge.md  ADR-0004-csv-review-state-before-sqlite.md
docs/handoff/: GOAL_PROMPT_FINISH_TODOS.md  GOAL_PROMPT_FULL_STACK_AUTOMATION.md  GOAL_PROMPT_LIVE_COMPLETION.md  GOAL_PROMPT_REAL_CSV_WORKFLOW_FIX.md  PRODUCT_FINALIZATION_PROMPT.md
tests/: test_pipeline.py
tests/fixtures/: bookbuddy_good.csv  bookbuddy_missing_required.csv
